--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  height: 100%;
+  height: 1000px;
 }
 
 .newsfeed {
@@ -18,8 +18,62 @@ body {
   z-index: 999 !important;
 }
 
+.twitterFeed {
+  color: black !important;
+}
+
+.tweet {
+  background: rgba(165, 165, 165, 0.07) !important;
+}
+
+.tweetLink {
+  color: black !important;
+}
+
+.tweetLink:hover {
+  color: rgb(102, 153, 246) !important;
+}
+
+.tweetArticles {
+  background: rgba(165, 165, 165, 0.3) !important;
+  border-radius: 15px 50px !important;
+  padding: 20px !important;
+}
+
+.tweetPosted {
+  font-size: 100% !important;
+  text-align: left !important;
+  display: inline-block !important;
+  margin-left: 10px !important;
+  font-style: italic !important;
+}
+
+.tweetMeta {
+  font-size: large !important;
+  color: black !important;
+}
+
+.modalHeader {
+  text-align: center;
+  font-size: 800% !important;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline !important;
+}
+
+.modalContent {
+  text-align: center;
+  font-size: 600% !important;
+  font-weight: bold;
+  font-style: italic;
+}
+
 .height {
   height: 1000px !important;
+}
+
+.landingButtons {
+  background: transparent !important;
 }
 
 
@@ -33,6 +87,10 @@ body {
   /*z-index: 999 !important;*/
 }
 
+.spacer {
+  margin-bottom: 20px !important;
+}
+
 .navheader {
   font-family: 'Plaster', cursive;
   font-size: 35px;
@@ -40,6 +98,11 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  color: white !important;
+  text-align: center;
+  text-shadow: -0px 0px 0.1em white, 0px 0px 0.2em white, 0px 0px 0.3em white,
+  0px 0px 0.4em rgb(102, 153, 246), 0px 0px 0.6em rgb(102, 153, 246), 0px 0px 0.8em rgb(102, 153, 246), 0px 0px 1.0em rgb(102, 153, 246), 0px 0px 1.2em rgb(102, 153, 246);
+
 }
 
 @keyframes blinker {
@@ -48,6 +111,17 @@ body {
 
 .wordcloud {
   background-color: black !important;
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  font-style: italic;
+  height: 3000px;
+}
+
+.interestSearch {
+  background-color: black !important;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 .header {
@@ -57,6 +131,11 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+}
+
+.likesRetweets {
+  font-size: medium                                                                                                                                            !important;
+  color: white !important;
 }
 
 /*.background {
@@ -87,19 +166,83 @@ body {
   background: transparent !important;
 }
 
-/*.articleLink {
-  color: black !important;
+/*.dashCloud {
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  font-style: italic;
 }*/
 
-/*.articles {
-  background-color: white !important;
+.articleLink {
+  color: white !important;
+}
+
+.articleLink:hover {
+  color: rgb(102, 153, 246) !important;
+}
+.steps {
+  /*background-color: rgb(102, 153, 246) !important;*/
+}
+.pieLabels {
+  text-align: center !important;
+  display: inline !important;
+  font-size: large !important;
+  font-weight: bold;
+}
+
+.pieLabelContainer {
+  text-align: center !important;
+}
+
+.articleSocial {
+  color: white;
+  text-align: center !important;
+  display: inline !important;
+  font-size: 120% !important;
+  /*font-weight: bold;*/
+  font-style: italic !important;
+  vertical-align: center !important;
+}
+
+.articleSocialHeart {
+  display: inline !important;
+  text-align: right !important;
+  margin-left: 5px !important;
+}
+
+
+
+.socialContainer {
+  text-align: left !important;
+}
+.interestsButton {
+  margin-top: 10px !important;
+}
+
+
+
+/*.pieChart {
+  color: white !important;
+  text-align: center;
+  text-shadow: -0px 0px 0.1em white, 0px 0px 0.2em white, 0px 0px 0.3em white,
+  0px 0px 0.4em rgb(255, 153, 0), 0px 0px 0.6em rgb(255, 153, 0), 0px 0px 0.8em rgb(255, 153, 0), 0px 0px 1.0em rgb(255, 153, 0), 0px 0px 1.2em rgb(255, 153, 0);
+}*/
+
+/*.pieChart:hover {
+  text-shadow: -0px 0px 0.1em white, 0px 0px 0.2em white, 0px 0px 0.3em white,
+  0px 0px 0.4em rgb(255, 153, 0), 0px 0px 0.6em rgb(255, 153, 0), 0px 0px 0.8em rgb(255, 153, 0), 0px 0px 1.0em rgb(255, 153, 0), 0px 0px 1.2em rgb(255, 153, 0);
 }*/
 
 .articles {
-  background-image: url("http://uzaykasifi.com/wp-content/uploads/2016/03/simple-star-space-background-effect-videos-23768149-hd-stock.jpg") !important;
+  background: rgba(165, 165, 165, 0.07) !important;
   border-radius: 15px 50px !important;
   padding: 20px !important;
 }
+
+
+
+/*background-image: url("http://uzaykasifi.com/wp-content/uploads/2016/03/simple-star-space-background-effect-videos-23768149-hd-stock.jpg") !important;*/
+
 
 /*"https://ak8.picdn.net/shutterstock/videos/7118800/thumb/1.jpg"
 http://www.easywallprints.com/upload/designs/newspaper-concept-background-zoom-1.jpg
